--- a/slide2.ioc
+++ b/slide2.ioc
@@ -13,23 +13,24 @@ Mcu.IP6=USART2
 Mcu.IPNb=7
 Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PH0 - OSC_IN
-Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PA11
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=16
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PH0 - OSC_IN
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin2=PH1 - OSC_OUT
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PA8
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -52,16 +53,26 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA6.GPIOParameters=GPIO_ModeDefaultPP
+PA6.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PA6.Signal=S_TIM3_CH1
+PA7.GPIOParameters=GPIO_ModeDefaultPP
+PA7.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PA7.Signal=S_TIM3_CH2
 PA8.Signal=S_TIM1_CH1
 PA9.Signal=S_TIM1_CH2
+PB0.GPIOParameters=GPIO_ModeDefaultPP
+PB0.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PB0.Signal=S_TIM3_CH3
+PB1.GPIOParameters=GPIO_ModeDefaultPP
+PB1.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PB1.Signal=S_TIM3_CH4
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
@@ -156,7 +167,8 @@ USART1.BaudRate=31250
 USART1.IPParameters=VirtualMode,BaudRate,Mode
 USART1.Mode=MODE_RX
 USART1.VirtualMode=VM_ASYNC
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=1000000
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
