--- a/slide2.ioc
+++ b/slide2.ioc
@@ -20,8 +20,9 @@ Mcu.Pin11=PA10
 Mcu.Pin12=PA11
 Mcu.Pin13=PB6
 Mcu.Pin14=PB7
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PH1 - OSC_OUT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -30,7 +31,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PA8
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -38,6 +39,7 @@ MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI9_5_IRQn=true\:1\:0\:true\:false\:false\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -72,6 +74,11 @@ PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PB9.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPXTI9
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
@@ -136,6 +143,8 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
